syntax = "proto3";

option csharp_namespace = "SocialInteractionsMicroservice.Protos";

package social_interactions;

service SocialInteractionsGrpcService {

    rpc GiveLike (GiveLikeRequest) returns (GiveLikeResponse);
    rpc MakeComment (MakeCommentRequest) returns (MakeCommentResponse);
    rpc GetVideoLikesAndComments (GetVideoLikesAndCommentsRequest) returns (GetVideoLikesAndCommentsResponse);
}

message GiveLikeRequest {
    string video_id = 1;
}

message GiveLikeResponse {
    string video_id = 1;
    int32 likes = 2;
}

message MakeCommentRequest {
    string video_id = 1;
    string comment = 2;
}

message MakeCommentResponse {
    string video_id = 1;
    string comment = 2;
}

message GetVideoLikesAndCommentsRequest {
    string video_id = 1;
}

message GetVideoLikesAndCommentsResponse {
    string video_id = 1;
    int32 likes = 2;
    repeated string comments = 3;
}